[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/ArcadeAlternate.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/ButtonConfiguration.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.72549, 0, 0, 0 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="ButtonConfiguration" type="Node2D"]
script = ExtResource( 2 )

[node name="InputLabel" type="Label" parent="."]
visible = false
margin_right = 195.0
margin_bottom = 51.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )

[node name="ActionButton" type="Button" parent="."]
visible = false
margin_left = 225.0
margin_top = 66.0
margin_right = 511.0
margin_bottom = 123.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_focus = Color( 1, 0.819608, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.819608, 0, 1 )
custom_colors/font_color_pressed = Color( 0.533333, 0.439216, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
flat = true
align = 0

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0.0470588, 0.0745098, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 80
custom_constants/margin_top = 80
custom_constants/margin_left = 80
custom_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 80.0
margin_top = 80.0
margin_right = 944.0
margin_bottom = 520.0
size_flags_vertical = 3

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 864.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Button Config"
align = 1
uppercase = true

[node name="ClearActionButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 864.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color_focus = Color( 1, 0.819608, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.819608, 0, 1 )
custom_colors/font_color_pressed = Color( 0.533333, 0.439216, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "Clear Key / Gamepad Value"
flat = true
align = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 864.0
margin_bottom = 166.0
custom_constants/margin_top = 15
custom_constants/margin_bottom = 15

[node name="ActionInputContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 15.0
margin_right = 864.0
margin_bottom = 60.0
custom_constants/vseparation = 15
custom_constants/hseparation = 50
columns = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/ActionInputContainer"]
margin_right = 98.0
margin_bottom = 26.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "Action"
uppercase = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/ActionInputContainer"]
margin_left = 148.0
margin_right = 276.0
margin_bottom = 26.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "Keyboard"
uppercase = true

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/ActionInputContainer"]
margin_left = 326.0
margin_right = 441.0
margin_bottom = 26.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "GamePad"
uppercase = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/MarginContainer/ActionInputContainer"]
margin_top = 41.0
margin_right = 98.0
margin_bottom = 45.0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/MarginContainer/ActionInputContainer"]
margin_left = 148.0
margin_top = 41.0
margin_right = 276.0
margin_bottom = 45.0

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer/MarginContainer/ActionInputContainer"]
margin_left = 326.0
margin_top = 41.0
margin_right = 441.0
margin_bottom = 45.0

[node name="PopupDialog" type="PopupDialog" parent="MarginContainer"]
margin_left = 80.0
margin_top = 80.0
margin_right = 944.0
margin_bottom = 520.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PopupDialog"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/PopupDialog/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 118.0
margin_bottom = 46.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
text = "Action"
uppercase = true

[node name="AcceptDialog" type="AcceptDialog" parent="MarginContainer"]
margin_left = 80.0
margin_top = 80.0
margin_right = 944.0
margin_bottom = 520.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/AcceptDialog"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/AcceptDialog/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 118.0
margin_bottom = 46.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
text = "Action"
uppercase = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/ClearActionButton" to="." method="_on_ClearActionButton_pressed"]
[connection signal="confirmed" from="MarginContainer/AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
